--- a/app/src/main/res/drawable/background_circle.xml
+++ b/app/src/main/res/drawable/background_circle.xml
@@ -4,6 +4,6 @@
     android:shape="oval">
 
     <size
-        android:width="@dimen/circle_size"
-        android:height="@dimen/circle_size" />
+        android:width="@dimen/frag_home_category_circle_size"
+        android:height="@dimen/frag_home_category_circle_size" />
 </shape>
