--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="72dp"
+                android:layout_height="@dimen/app_new_item_layout_height"
                 android:layout_gravity="center"
                 android:background="@color/purple_dark"
                 android:gravity="center"
@@ -70,7 +70,8 @@
         <FrameLayout
             android:id="@+id/contentFrame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/default_padding"/>
 
     </LinearLayout>
 
@@ -103,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="2dp"
                 android:layout_toRightOf="@id/drawerUserImage"
                 android:text="@string/user_name"
                 android:textColor="@color/white"
