--- a/app/src/main/res/layout/category_view.xml
+++ b/app/src/main/res/layout/category_view.xml
@@ -14,11 +14,12 @@
 
         <TextView
             android:id="@+id/category_name"
-            style="@style/RobotoTextView.Number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:singleLine="true"
+            android:textColor="@color/white"
             android:textAlignment="center"
-            android:textSize="@dimen/category_text_size" />
+            android:textSize="@dimen/frag_home_category_name_text_size" />
     </LinearLayout>
 </RelativeLayout>
