--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -6,7 +6,8 @@
     <ListView
         android:id="@+id/frag_prod_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="2dp"/>
 
     <LinearLayout
         android:id="@+id/frag_prod_tutorial"
