--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/default_padding">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -13,7 +12,7 @@
         android:padding="@dimen/default_small_padding"
         android:text="@string/settings_backup"
         android:textColor="@color/purple_dark"
-        android:textSize="@dimen/text_size_large" />
+        android:textSize="@dimen/text_size_medium" />
 
     <LinearLayout
         android:layout_width="match_parent"
