--- a/app/src/main/res/layout/products_list_row.xml
+++ b/app/src/main/res/layout/products_list_row.xml
@@ -15,16 +15,15 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/default_small_padding"
         android:textColor="@color/gray"
-        android:textSize="@dimen/item_name_text_size" />
+        android:textSize="@dimen/frag_prod_item_name_text_size" />
 
     <ImageView
         android:id="@+id/item_row_status_view"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/frag_prod_product_circle_size"
+        android:layout_height="@dimen/frag_prod_product_circle_size"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="2dp" />
+        android:layout_centerVertical="true"/>
 </RelativeLayout>
