--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
         android:columnWidth="@dimen/frag_home_category_grid_column_width"
         android:gravity="center"
         android:horizontalSpacing="@dimen/default_small_padding"
+        android:listSelector="@drawable/invisible_list_selector"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="@dimen/default_small_padding" />
