--- a/app/src/main/res/layout/navigation_drawer_list_view.xml
+++ b/app/src/main/res/layout/navigation_drawer_list_view.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<bp.jellena.shopify.ui.navigationdrawer.NavigationDrawerView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        style="@style/Match">
+<bp.jellena.shopify.ui.navigationdrawer.NavigationDrawerView xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Match"
+    android:orientation="vertical">
 
     <ProgressBar
-            android:id="@+id/bookingProgress"
-            style="@style/Wrap"
-            android:layout_gravity="center"/>
+        android:id="@+id/bookingProgress"
+        style="@style/Wrap"
+        android:layout_gravity="center" />
+
     <ListView
-            android:id="@+id/leftDrawerListView"
-            android:layout_width="@dimen/navigation_drawer_width"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="@color/grey_background"
-            android:cacheColorHint="@color/transparent"
-            android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"/>
+        android:id="@+id/leftDrawerListView"
+        android:layout_width="@dimen/navigation_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/grey_background"
+        android:cacheColorHint="@color/transparent"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent" />
 </bp.jellena.shopify.ui.navigationdrawer.NavigationDrawerView>
