--- a/app/src/main/res/layout/products_list_row.xml
+++ b/app/src/main/res/layout/products_list_row.xml
@@ -1,29 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/item_row_name_TV"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/default_small_padding"
-        android:textColor="@color/gray"
-        android:textSize="@dimen/frag_prod_item_name_text_size" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/default_small_padding" />
 
-    <ImageView
-        android:id="@+id/item_row_status_view"
-        android:layout_width="@dimen/frag_prod_product_circle_size"
-        android:layout_height="@dimen/frag_prod_product_circle_size"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/item_row_name_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/default_small_padding"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/frag_prod_item_name_text_size" />
+
+        <ImageView
+            android:id="@+id/item_row_status_view"
+            android:layout_width="@dimen/frag_prod_product_circle_size"
+            android:layout_height="@dimen/frag_prod_product_circle_size"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"/>
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/default_small_padding" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@color/gray_shadow" />
+</LinearLayout>
