--- a/app/src/main/res/values-sw320dp-hdpi/dimens.xml
+++ b/app/src/main/res/values-sw320dp-hdpi/dimens.xml
@@ -1,13 +1,12 @@
 <resources>
 
     <dimen name="action_bar_height">48dp</dimen>
-    <dimen name="default_padding">18dp</dimen>
+    <dimen name="default_padding">8dp</dimen>
     <dimen name="default_small_padding">4dp</dimen>
 
     <!-- Navigation Drawer -->
-    <dimen name="navigation_drawer_width">200dp</dimen>
+    <dimen name="navigation_drawer_width">180dp</dimen>
     <dimen name="navigation_drawer_image_view_size">20dp</dimen>
-
     <dimen name="navigation_drawer_personal_data_layout_height">50dp</dimen>
 
     <!-- Fonts' sizes -->
@@ -16,7 +15,6 @@
     <dimen name="text_size_medium">18sp</dimen>
     <dimen name="text_size_large">22sp</dimen>
     <dimen name="text_size_xlarge">28sp</dimen>
-    <dimen name="text_size_fragment_number">122sp</dimen>
 
     <!--App-->
     <dimen name="app_new_item_layout_height">64dp</dimen>
@@ -26,9 +24,9 @@
     <dimen name="app_drawer_item_text_size">16sp</dimen>
 
     <!--Home fragment-->
-    <dimen name="frag_home_category_grid_column_width">90dp</dimen>
-    <dimen name="frag_home_category_name_text_size">18sp</dimen>
-    <dimen name="frag_home_category_circle_size">90dp</dimen>
+    <dimen name="frag_home_category_grid_column_width">85dp</dimen>
+    <dimen name="frag_home_category_name_text_size">16sp</dimen>
+    <dimen name="frag_home_category_circle_size">85dp</dimen>
 
     <!--Products fragment-->
     <dimen name="frag_prod_product_circle_size">36dp</dimen>
@@ -36,6 +34,10 @@
     <dimen name="frag_prod_item_between_circle_stroke">8dp</dimen>
     <dimen name="frag_prod_item_full_circle_stroke">2dp</dimen>
     <dimen name="frag_prod_item_name_text_size">20sp</dimen>
+    <dimen name="frag_prod_add_item_btn_height">48dp</dimen>
+
+    <!--Shop fragment-->
+    <dimen name="frag_shop_grid_column_width">200dp</dimen>
 
     <!--Tutorial-->
     <dimen name="tutorial_text_size">24sp</dimen>
