--- a/app/src/main/res/values-sw320dp-xhdpi/dimens.xml
+++ b/app/src/main/res/values-sw320dp-xhdpi/dimens.xml
@@ -1,13 +1,12 @@
 <resources>
 
     <dimen name="action_bar_height">48dp</dimen>
-    <dimen name="default_padding">16dp</dimen>
-    <dimen name="default_small_padding">8dp</dimen>
+    <dimen name="default_padding">12dp</dimen>
+    <dimen name="default_small_padding">6dp</dimen>
 
     <!-- Navigation Drawer -->
-    <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="navigation_drawer_width">180dp</dimen>
     <dimen name="navigation_drawer_image_view_size">25dp</dimen>
-
     <dimen name="navigation_drawer_personal_data_layout_height">60dp</dimen>
 
     <!-- Fonts' sizes -->
@@ -31,11 +30,15 @@
     <dimen name="frag_home_category_circle_size">100dp</dimen>
 
     <!--Products fragment-->
-    <dimen name="frag_prod_product_circle_size">44dp</dimen>
+    <dimen name="frag_prod_product_circle_size">40dp</dimen>
     <dimen name="frag_prod_item_empty_circle_stroke">18dp</dimen>
     <dimen name="frag_prod_item_between_circle_stroke">10dp</dimen>
     <dimen name="frag_prod_item_full_circle_stroke">2dp</dimen>
     <dimen name="frag_prod_item_name_text_size">22sp</dimen>
+    <dimen name="frag_prod_add_item_btn_height">50dp</dimen>
+
+    <!--Shop fragment-->
+    <dimen name="frag_shop_grid_column_width">200dp</dimen>
 
     <!--Tutorial-->
     <dimen name="tutorial_text_size">30sp</dimen>
