--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,16 +7,10 @@
     <dimen name="default_small_padding">8dp</dimen>
     <dimen name="reset_dimen">0dp</dimen>
 
-
     <!-- Navigation Drawer -->
     <dimen name="navigation_drawer_width">240dp</dimen>
     <dimen name="navigation_drawer_image_view_size">25dp</dimen>
-
     <dimen name="navigation_drawer_personal_data_layout_height">60dp</dimen>
-
-    <!-- Circle size -->
-    <dimen name="frag_home_category_circle_size">96dp</dimen>
-    <dimen name="circle_half_size">48dp</dimen>
 
     <!-- Fonts' sizes -->
     <dimen name="text_size_micro">12sp</dimen>
@@ -34,8 +28,8 @@
     <dimen name="app_drawer_item_text_size">16sp</dimen>
 
     <!--Home fragment-->
-    <dimen name="frag_home_category_grid_column_width">100dp</dimen>
-    <dimen name="frag_home_category_name_text_size">25sp</dimen>
+    <dimen name="frag_home_category_grid_column_width">95dp</dimen>
+    <dimen name="frag_home_category_name_text_size">20sp</dimen>
 
     <!--Products fragment-->
     <dimen name="frag_prod_product_circle_size">32dp</dimen>
@@ -43,6 +37,10 @@
     <dimen name="frag_prod_item_between_circle_stroke">8dp</dimen>
     <dimen name="frag_prod_item_full_circle_stroke">2dp</dimen>
     <dimen name="frag_prod_item_name_text_size">20sp</dimen>
+    <dimen name="frag_prod_add_item_btn_height">56dp</dimen>
+
+    <!--Products fragment-->
+    <dimen name="frag_shop_grid_column_width">200dp</dimen>
 
     <!--Tutorial-->
     <dimen name="tutorial_text_size">30sp</dimen>
