--- a/app/src/main/res/drawable/item_circle_between.xml
+++ b/app/src/main/res/drawable/item_circle_between.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/purple_dark" />
+    <solid android:color="@color/main_color" />
     <stroke
         android:width="@dimen/frag_prod_item_between_circle_stroke"
         android:color="@color/grey_background" />
