--- a/app/src/main/res/layout-sw620dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw620dp-land/activity_main.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/app_new_item_layout_height"
                 android:layout_gravity="center"
-                android:background="@color/purple_dark"
+                android:background="@color/main_color"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -95,7 +95,7 @@
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/background_user_navigation_drawer"
+        android:background="@color/main_color"
         android:orientation="vertical">
 
         <RelativeLayout
