--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
     style="@style/Match"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:animateLayoutChanges="true">
 
     <GridView
         android:id="@+id/frag_home_category_grid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_small_padding"
+        android:layout_marginBottom="@dimen/default_small_padding"
+        android:layout_marginLeft="@dimen/default_small_padding"
+        android:layout_marginRight="@dimen/default_small_padding"
+        android:layout_marginTop="@dimen/default_padding"
         android:animateLayoutChanges="true"
         android:columnWidth="@dimen/frag_home_category_grid_column_width"
         android:gravity="center"
@@ -16,7 +20,7 @@
         android:listSelector="@drawable/invisible_list_selector"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/default_small_padding" />
+        android:verticalSpacing="@dimen/default_small_padding"/>
 
     <LinearLayout
         android:id="@+id/frag_home_tutorial"
@@ -33,8 +37,8 @@
             android:gravity="center"
             android:padding="@dimen/default_small_padding"
             android:text="@string/tutorial_home_title"
-            android:textColor="@color/purple_dark"
-            android:textSize="@dimen/tutorial_title_size" />
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/tutorial_title_size"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -43,7 +47,7 @@
             android:gravity="center"
             android:padding="@dimen/default_small_padding"
             android:text="@string/tutorial_home_text"
-            android:textColor="@color/purple_light"
-            android:textSize="@dimen/tutorial_text_size" />
+            android:textColor="@color/main_color"
+            android:textSize="@dimen/tutorial_text_size"/>
     </LinearLayout>
 </RelativeLayout>
