--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -11,7 +11,7 @@
         android:gravity="center_vertical"
         android:padding="@dimen/default_small_padding"
         android:text="@string/settings_backup"
-        android:textColor="@color/purple_dark"
+        android:textColor="@color/main_color"
         android:textSize="@dimen/text_size_medium" />
 
     <LinearLayout
