--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -31,7 +31,7 @@
             android:gravity="center"
             android:padding="@dimen/default_small_padding"
             android:text="@string/tutorial_shop_title"
-            android:textColor="@color/purple_dark"
+            android:textColor="@color/main_color"
             android:textSize="@dimen/tutorial_title_size" />
 
         <TextView
@@ -41,7 +41,7 @@
             android:gravity="center"
             android:padding="@dimen/default_small_padding"
             android:text="@string/tutorial_shop_text"
-            android:textColor="@color/purple_light"
+            android:textColor="@color/main_color"
             android:textSize="@dimen/tutorial_text_size" />
 
     </LinearLayout>
